Added mock test for service